kubernetes-config/oauth-demo-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-demo-client
spec:
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  type: NodePort
  selector:
    app: oauth-demo-client
